Fix hovers on mobile on note list item

--- a/src/app/components/notes/notes/notes.component.sass
+++ b/src/app/components/notes/notes/notes.component.sass
@@ -187,7 +187,7 @@ div#notes-page-container
                         background-color: $red
 
                         @media (hover: none)  // remove hover on mobiles
-                            background-color: $bisque-light
+                            background-color: $bisque-lightest
 
 
                         pre
